--- a/views/amikom/detail/dokumentasi/index.html
+++ b/views/amikom/detail/dokumentasi/index.html
@@ -48,6 +48,8 @@
                 </div>
                 <ul>
                     <li><a href="../../../../amikom.html">PENJELASAN</a></li>
+                    <li><a href="../sejarah/index.html">SEJARAH</a></li>
+                    <li><a href="../visi/index.html">VISI & MISI</a></li>
                     <li><a href="../materi/index.html">MATERI</a></li>
                     <li><a href="../struktur/index.html">STRUKTUR</a></li>
                     <li><a href="../dokumentasi/index.html">DOKUMENTASI</a></li>
@@ -59,10 +61,13 @@
                 </div>
                 <div class="content">
                     <div class="image-group">
-                        <img src="../../../../public/image/wisata/heha.jpg" alt="dokumentasi">
-                        <img src="../../../../public/image/wisata/heha.jpg" alt="dokumentasi">
-                        <img src="../../../../public/image/wisata/heha.jpg" alt="dokumentasi">
-                        <img src="../../../../public/image/wisata/heha.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/dokumentasi/amikom/dok4.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/dokumentasi/amikom/dok6.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/dokumentasi/amikom/dok1.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/dokumentasi/amikom/dok2.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/dokumentasi/amikom/dok3.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/dokumentasi/amikom/dok5.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/dokumentasi/amikom/dok7.jpg" alt="dokumentasi">
                     </div>
                 </div>
             </main>
