--- a/views/amikom/detail/visi/index.html
+++ b/views/amikom/detail/visi/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KEL4 - Struktur BLPT</title>
+    <title>KEL4 - VISI & MISI AMIKOM</title>
     <!-- Font Awesome Cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
@@ -25,13 +25,13 @@
                 class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )
         </h1>
     </div>
-    <section id="blpt_detail_structure">
+    <section id="amikom_detail_vision">
         <header>
             <div class="logo">
-                <img src="../../../../public/image/logo/logo-blpt.png" alt="logo-blpt">
+                <img src="../../../../public/image/logo/logo-amikom.jpg" alt="logo-amikom">
             </div>
             <div class="title">
-                <h1>BLPT</h1>
+                <h1>AMIKOM</h1>
             </div>
         </header>
         <nav>
@@ -47,21 +47,41 @@
                     <h1>TABEL KONTEN</h1>
                 </div>
                 <ul>
-                    <li><a href="../../../../index.html">PENJELASAN</a></li>
+                    <li><a href="../../../../amikom.html">PENJELASAN</a></li>
                     <li><a href="../sejarah/index.html">SEJARAH</a></li>
                     <li><a href="../visi/index.html">VISI & MISI</a></li>
                     <li><a href="../materi/index.html">MATERI</a></li>
                     <li><a href="../struktur/index.html">STRUKTUR</a></li>
-                    <li><a href="../projek/index.html">PROJEK</a></li>
                     <li><a href="../dokumentasi/index.html">DOKUMENTASI</a></li>
                 </ul>
             </aside>
             <main>
                 <div class="title">
-                    <h1>STRUKTUR</h1>
+                    <h1>VISI MISI</h1>
                 </div>
                 <div class="content">
-                    <img src="../../../../public/image/struktur/struktur-blpt.png" alt="">
+                    <div class="vision">
+                        <h1>Visi</h1>
+                        <ul>
+                            <li>Menjadi Center of Innovation Excellence (pusat Keunggulan Inovasi).</li>
+                        </ul>
+                    </div>
+                    <div class="mission">
+                        <h1>Misi</h1>
+                        <ul>
+                            <li>Menyelenggarakan pendidikan tinggi kelas dunia di bidang ekonomi kreatif berbasis
+                                kewirausahaan.</li>
+                            <li>Melaksanakan penelitian dalam bidang ekonomi kreatif berkualitas dunia yang dapat
+                                berperan meningkatkan daya saing nasional.</li>
+                            <li>Menyelenggarakan layanan pengabdian kepada masyarakat secara profesional dalam rangka
+                                ikut memecahkan persoalan dunia maupun nasional, terutama dalam bidang ekonomi kreatif.
+                            </li>
+                            <li>Menyelenggarakan pendidikan berstandar global melalui kemitraan dan jejaring nasional,
+                                regional maupun global.</li>
+                            <li>Mengembangkan pusat ekonomi kreatif dan pusat kewirausahaan yang bermanfaat baik
+                                nasional, regional maupun global.</li>
+                        </ul>
+                    </div>
                 </div>
             </main>
         </section>
