--- a/views/bltp/detail/projek/index.html
+++ b/views/bltp/detail/projek/index.html
@@ -48,6 +48,8 @@
                 </div>
                 <ul>
                     <li><a href="../../../../index.html">PENJELASAN</a></li>
+                    <li><a href="../sejarah/index.html">SEJARAH</a></li>
+                    <li><a href="../visi/index.html">VISI & MISI</a></li>
                     <li><a href="../materi/index.html">MATERI</a></li>
                     <li><a href="../struktur/index.html">STRUKTUR</a></li>
                     <li><a href="../projek/index.html">PROJEK</a></li>
@@ -59,7 +61,49 @@
                     <h1>PROJEK</h1>
                 </div>
                 <div class="content">
-                    <h1>Konten Projek BLPT</h1>
+                    <h1>Becak Listrik</h1>
+                    <div class="image-group">
+                        <img src="../../../../public/image/dokumentasi/blpt/becak-blpt1.jpg" alt="projek">
+                        <img src="../../../../public/image/dokumentasi/blpt/becak-blpt2.jpg" alt="projek">
+                    </div>
+                    <div class="description">
+                        <p>
+                            Becak listrik, inovasi baru ramah lingkungan yang belum banyak orang mengetahui
+                            keberadaannya.
+                            Becak listrik ini tidak membutuhkan bensin, apalagi harga BBM saat ini sedang naik. Tujuan awal dari becak listrik ini untuk mengurangi polusi udara yang dihasilan dari Becak
+                            motor, dan dengan adanya becak listrik ini tidak akan menghilangkan nilai historis dari
+                            becak tradisional.
+                            Becak listrik ini dapat diatur kecepatannya, dan cara menggunakan nya pun sangat praktis.
+                            Design becak motor inipun memiliki design yang menarik, selain itu becak listrik ini berbeda
+                            dari becak - becak lainnya karena memiliki proteksi keamanan seatbelt.
+                            Dengan adanya becak listrik ini pembecak tidak perlu khawatir lagi dengan harga BBM yang
+                            naik, dan dapat bekerja normal seperti biasa.
+                        </p>
+                        <p>
+                            Bagaimana jika barang tidak memenuhi Standar Nasional Indonesia? Maka produk tersebut akan
+                            diserahkan kembali kepada kepatihan sebagai sumber dana APBD dan dana istimewa. Jika becak
+                            listrik telah memasuki produksi massal, becak listrik ini akan diarahkan kepada para
+                            pembecak. Becak listrik tidak dibagikan secara gratis tetapi akan diperjual belikan dengan
+                            harga relatif rendah tanpa mengurangi sedikitpun kualitasnya.
+                            Komposisi bahan produksi prototype becak listrik bermacam-macam dan tidak 100% barang lokal.
+                            Penggerak becak berasal dari China, Besi berasal dari produk lokal (Krakatau steel), Jok
+                            merupakan produk handmade BLPT. Kurun waktu proses produksi ± 6 bulan, Becak listrik ini
+                            dikerjakan oleh berbagai jurusan teknik dari Balai Pendidikan Latihan Umum (BLPT) yaitu
+                            otomotif, mesin, elektro dan perkayuan. Sparepart yang digunakan dalam produksi becak
+                            listrik memiliki tafsiran harga biaya motor
+                            sekitar 17 Juta dan belum dilengkapi baterai.
+                        </p>
+                        <p>
+                            Mengapa kendaraan yang menggunakan tenaga listrik relatif mahal? Karena pada saat baterai
+                            kendaraan tersebut rusak, maka biaya yang diperlukan untuk mengganti yang baru memerlukan
+                            banyak biaya dan sampai saat ini masih belum ditemukan harga murahnya. Tetapi ketika produk
+                            tersebut sudah diproduksi secara massal maka harga jual produk tersebut akan lebih murah
+                            daripada masa prototype.
+                            Kelemahan dari becak listrik ini yaitu belum di uji coba dan masih dalam bentuk prototype.
+                            Sebelum memasuki tahap produksi massal sebuah produk harus diuji coba hingga memenuhi
+                            Standar Nasional Indonesia (SNI).
+                        </p>
+                    </div>
                 </div>
             </main>
         </section>
