--- a/views/bltp/detail/visi/index.html
+++ b/views/bltp/detail/visi/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KEL4 - Struktur BLPT</title>
+    <title>KEL4 - Sejarah BLPT</title>
     <!-- Font Awesome Cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
@@ -25,7 +25,7 @@
                 class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )
         </h1>
     </div>
-    <section id="blpt_detail_structure">
+    <section id="blpt_detail_vision">
         <header>
             <div class="logo">
                 <img src="../../../../public/image/logo/logo-blpt.png" alt="logo-blpt">
@@ -58,10 +58,24 @@
             </aside>
             <main>
                 <div class="title">
-                    <h1>STRUKTUR</h1>
+                    <h1>VISI & MISI</h1>
                 </div>
                 <div class="content">
-                    <img src="../../../../public/image/struktur/struktur-blpt.png" alt="">
+                    <div class="vision">
+                        <h1>Visi</h1>
+                        <ul>
+                            <li>“Menjadi Balai Latihan dan Pendidikan Teknik yang Profesional untuk mencetak sumber daya manusia yang unggul dan beretika”</li>
+                        </ul>
+                    </div>
+                    <div class="mission">
+                        <h1>Misi</h1>
+                        <ul>
+                            <li>Menghasilkan lulusan/sumber daya manusia yang kompeten dan beretika.</li>
+                            <li>Menyelenggarakan Pendidikan dan Pelatihan Teknik secara Profesional dan Terstandar.</li>	
+                            <li>Meningkatkan Kompetensi sumber daya manusia dan sarana prasarana.</li>
+                            <li>Meningkatkan Pengelolaan Keuangan.</li>
+                        </ul>
+                    </div>
                 </div>
             </main>
         </section>
