--- a/views/amikom/detail/sejarah/index.html
+++ b/views/amikom/detail/sejarah/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KEL4 - Struktur AMIKOM</title>
+    <title>KEL4 - Sejarah AMIKOM</title>
     <!-- Font Awesome Cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
@@ -25,7 +25,7 @@
                 class="fa-solid fa-laptop"></i>, <i class="fa-solid fa-display"></i>, <i class="fa-solid fa-tv"></i> )
         </h1>
     </div>
-    <section id="amikom_detail_structure">
+    <section id="amikom_detail_history">
         <header>
             <div class="logo">
                 <img src="../../../../public/image/logo/logo-amikom.jpg" alt="logo-amikom">
@@ -57,10 +57,42 @@
             </aside>
             <main>
                 <div class="title">
-                    <h1>STRUKTUR</h1>
+                    <h1>SEJARAH</h1>
                 </div>
                 <div class="content">
-                    <img src="../../../../public/image/struktur/struktur-amikom.jpg" alt="">
+                    <p>
+                        Universitas Amikom Yogyakarta merupakan perubahan dari Sekolah Tinggi Manajemen Informatika dan
+                        Komputer Amikom Yogyakarta. Sebelumnya Sekolah Tinggi Manajemen Informatika dan Komputer Amikom
+                        Yogyakarta, merupakan perubahan dari Akademi Manajemen Informatika dan Komputer Amikom
+                        Yogyakarta yang mendapatkan status terdaftar berdasarkan Surat Keputusan Menteri Pendidikan dan
+                        Kebudayaan Republik Indonesia No. 084/D/O/1994 tanggal 11 Oktober 1994. Perubahan bentuk ini
+                        dilakukan untuk mempermudah mencapai visinya sebagai perguruan tinggi unggulan dunia dalam
+                        bidang ekonomi kreatif berbasis entrepreneurship.
+                    </p>
+                    <p>
+                        Universitas Amikom Yogyakarta yang sebelumnya Sekolah Tinggi Manajemen Informatika dan Komputer
+                        Amikom Yogyakarta telah menjadi Perguruan Tinggi Swasta Percontohan Dunia Model Private
+                        Entrepreneur oleh UNESCO (Unesco, A New Dynamic : Private Higher Education, 2009). Universitas
+                        Amikom Yogyakarta juga telah meraih 80 penghargaan internasional dan lebih dari 210 penghargaan
+                        nasional serta menghasilkan 24% lulusannya sebagai pengusaha (Business Placement Center AMIKOM,
+                        2014). Perguruan Tinggi telah terakreditasi institusi B dan telah mendapatkan sertifikasi ISO
+                        2009.
+                    </p>
+                    <p>
+                        Saat ini kepercayaan masyarakat cukup baik, dibuktikan diantaranya dengan meningkatnya jumlah
+                        mahasiswa dari tahun ketahun pada 2020 mempunyai 13.713 mahasiswa untuk Program Studi. Mulai
+                        dari Program Studi Diploma III Manajemen Informatika, Program Studi Diploma III Teknik
+                        Informatika, Program Studi S1 Sistem Informasi, Program Studi S1 Teknik Informatika dan Program
+                        Studi S2 Magister Teknik Informatika. Pada 2019, Universitas Amikom Yogyakarta menurut QS Stars
+                        dalam Computer Science and Information Systems merupakan Perguruan Tinggi Swasta Rating Terbaik
+                        di Indonesia.
+                    </p>
+                    <p>
+                        Dengan memanfaatkan berbagai keunggulan strategis yang dimiliki secara optimal, evaluasi kondisi
+                        saat ini serta berpijak pada visi dan misi Universitas Amikom Yogyakarta, maka perlu disusun
+                        sebuah rencana strategis yang akan memberikan arah serta menjadi acuan bagi Universitas Amikom
+                        Yogyakarta dalam perjalanan kedepan.
+                    </p>
                 </div>
             </main>
         </section>
