--- a/views/bltp/detail/dokumentasi/index.html
+++ b/views/bltp/detail/dokumentasi/index.html
@@ -48,6 +48,8 @@
                 </div>
                 <ul>
                     <li><a href="../../../../index.html">PENJELASAN</a></li>
+                    <li><a href="../sejarah/index.html">SEJARAH</a></li>
+                    <li><a href="../visi/index.html">VISI & MISI</a></li>
                     <li><a href="../materi/index.html">MATERI</a></li>
                     <li><a href="../struktur/index.html">STRUKTUR</a></li>
                     <li><a href="../projek/index.html">PROJEK</a></li>
@@ -60,10 +62,13 @@
                 </div>
                 <div class="content">
                     <div class="image-group">
-                        <img src="../../../../public/image/wisata/heha.jpg" alt="dokumentasi">
-                        <img src="../../../../public/image/wisata/heha.jpg" alt="dokumentasi">
-                        <img src="../../../../public/image/wisata/heha.jpg" alt="dokumentasi">
-                        <img src="../../../../public/image/wisata/heha.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/dokumentasi/blpt/dok7.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/dokumentasi/blpt/dok6.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/dokumentasi/blpt/dok5.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/dokumentasi/blpt/dok4.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/dokumentasi/blpt/dok3.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/dokumentasi/blpt/dok2.jpg" alt="dokumentasi">
+                        <img src="../../../../public/image/dokumentasi/blpt/dok1.jpg" alt="dokumentasi">
                     </div>
                 </div>
             </main>
