--- a/views/bltp/detail/materi/index.html
+++ b/views/bltp/detail/materi/index.html
@@ -48,6 +48,8 @@
                 </div>
                 <ul>
                     <li><a href="../../../../index.html">PENJELASAN</a></li>
+                    <li><a href="../sejarah/index.html">SEJARAH</a></li>
+                    <li><a href="../visi/index.html">VISI & MISI</a></li>
                     <li><a href="../materi/index.html">MATERI</a></li>
                     <li><a href="../struktur/index.html">STRUKTUR</a></li>
                     <li><a href="../projek/index.html">PROJEK</a></li>
