--- a/views/amikom/detail/visi/index.html
+++ b/views/amikom/detail/visi/index.html
@@ -63,7 +63,7 @@
                     <div class="vision">
                         <h1>Visi</h1>
                         <ul>
-                            <li>Menjadi Center of Innovation Excellence (pusat Keunggulan Inovasi).</li>
+                            <li>“Menjadi Center of Innovation Excellence (pusat Keunggulan Inovasi)”</li>
                         </ul>
                     </div>
                     <div class="mission">
